# mdi-js

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.ja.md  README.md  SECURITY.md  SYNTAX.md  codecov.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: fresh-tcy-styles.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  docs.yml  python.yml  release-android.yml  release-pypi.yml  release-rust.yml  release.yml  swift-release.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/mdi-android/: build.gradle.kts
android/mdi-android/src/main/jniLibs/: .gitignore
android/scripts/: acceptance.sh  build-native.sh  run-gradle.sh
config/: publication-layouts.yaml
crates/mdi-core/: Cargo.toml
docs/: .gitignore  CHANGELOG.md  README.md  astro.config.mjs  mdi-2.0-announcement.md  package.json
docs/public/: CNAME
docs/src/components/: Empty.astro  ForcedDarkTheme.astro  Header.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/bindings/: android.md  cli.md  javascript.md  python.md  rust.md  swift.md
docs/src/content/docs/core/: architecture.md  diagnostics.md  document-ir.md  rendering.md  rust-api.md
docs/src/content/docs/ecosystem/: compatibility.md  export-profiles.md  note.md  outputs.md  remark.md
docs/src/content/docs/guides/: architecture.md  export-profiles.md  getting-started.md
docs/src/content/docs/ja/: index.mdx
docs/src/content/docs/ja/bindings/: android.md  cli.md  javascript.md  python.md  rust.md  swift.md
docs/src/content/docs/ja/core/: architecture.md  diagnostics.md  document-ir.md  rendering.md  rust-api.md
docs/src/content/docs/ja/ecosystem/: compatibility.md  export-profiles.md  note.md  outputs.md  remark.md
docs/src/content/docs/ja/guides/: architecture.md  export-profiles.md  getting-started.md
docs/src/content/docs/ja/learn/: core-concepts.md  what-is-mdi.md
docs/src/content/docs/ja/syntax/: reference.md  showcase.md
docs/src/content/docs/learn/: core-concepts.md  what-is-mdi.md
docs/src/content/docs/syntax/: reference.md  showcase.md
docs/src/content/docs/zh-tw/: index.mdx
docs/src/content/docs/zh-tw/bindings/: android.md  cli.md  javascript.md  python.md  rust.md  swift.md
docs/src/content/docs/zh-tw/core/: architecture.md  diagnostics.md  document-ir.md  rendering.md  rust-api.md
docs/src/content/docs/zh-tw/ecosystem/: compatibility.md  export-profiles.md  note.md  outputs.md  remark.md
docs/src/content/docs/zh-tw/guides/: architecture.md  export-profiles.md  getting-started.md
docs/src/content/docs/zh-tw/learn/: core-concepts.md  what-is-mdi.md
docs/src/content/docs/zh-tw/syntax/: reference.md  showcase.md
docs/src/pages/api/: index.astro
docs/src/styles/: docs.css
examples/: kitchen-sink.mdi  novel.mdi
mdi-android-jni/: Cargo.toml
mdi-android-jni/src/: lib.rs
mdi-core/: Cargo.toml  README.md
mdi-core/src/: docx.rs  lib.rs  publication_profile.rs
mdi-core/tests/: note_export_contracts.rs  platform_export_contracts.rs
nodejs/: package.json  pnpm-lock.yaml  tsconfig.base.json
nodejs/.changeset/: bright-notes-export.md
nodejs/docs/: CHANGELOG.md  README.md  astro.config.mjs  mdi-2.0-announcement.md  package.json
nodejs/docs/src/content/docs/: index.mdx
nodejs/docs/src/content/docs/bindings/: cli.md  javascript.md  python.md  rust.md  swift.md
nodejs/docs/src/content/docs/core/: architecture.md  diagnostics.md  document-ir.md  rendering.md  rust-api.md
nodejs/docs/src/content/docs/ecosystem/: compatibility.md  export-profiles.md  outputs.md  remark.md
nodejs/docs/src/content/docs/guides/: architecture.md  export-profiles.md  getting-started.md
nodejs/docs/src/content/docs/ja/: index.mdx
nodejs/docs/src/content/docs/ja/bindings/: cli.md  javascript.md  python.md  rust.md  swift.md
nodejs/docs/src/content/docs/ja/core/: architecture.md  diagnostics.md  document-ir.md  rendering.md  rust-api.md
nodejs/docs/src/content/docs/ja/ecosystem/: compatibility.md  export-profiles.md  outputs.md  remark.md
nodejs/docs/src/content/docs/ja/guides/: architecture.md  getting-started.md
nodejs/docs/src/content/docs/ja/learn/: core-concepts.md  what-is-mdi.md
nodejs/docs/src/content/docs/ja/syntax/: reference.md  showcase.md
nodejs/docs/src/content/docs/learn/: core-concepts.md  what-is-mdi.md
nodejs/docs/src/content/docs/syntax/: reference.md  showcase.md
nodejs/docs/src/content/docs/zh-tw/: index.mdx
nodejs/docs/src/content/docs/zh-tw/bindings/: cli.md  javascript.md  python.md  rust.md  swift.md
nodejs/docs/src/content/docs/zh-tw/core/: architecture.md  diagnostics.md  document-ir.md  rendering.md  rust-api.md
nodejs/docs/src/content/docs/zh-tw/ecosystem/: compatibility.md  export-profiles.md  outputs.md  remark.md
nodejs/docs/src/content/docs/zh-tw/guides/: architecture.md  export-profiles.md  getting-started.md
nodejs/docs/src/content/docs/zh-tw/learn/: core-concepts.md  what-is-mdi.md
nodejs/docs/src/content/docs/zh-tw/syntax/: reference.md
nodejs/docs/src/styles/: docs.css
nodejs/format-contracts/openxml-validator/: OpenXmlValidator.csproj  Program.cs
nodejs/scripts/: check-node-coverage.mjs  compute-release-versions.mjs  create-github-releases.mjs  pack-publishable-package.mjs  pack-publishable-package.test.mjs  publish-versioned-packages.mjs  test-publication-contracts.mjs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/src/mdi/: __init__.py
python/tests/: test_mdi.py  test_package_smoke.py
scripts/: create-github-releases.mjs  export-swift-coverage.sh  publish-versioned-packages.mjs  verify-publication-layouts.mjs  verify-swift-package-formats.sh  write-swift-package-manifest.sh
swift/: Package.swift  README.md
swift/Sources/MDI/: MDI.swift
swift/Sources/MDICore/include/: mdi_core.h
swift/Tests/MDITests/: MDITests.swift
(+4 files in other folders)
