[package]
name = "mdi-core"
version = "2.0.1"
description = "Language-neutral parser for MDI 2.0 syntax"
edition = "2024"
license = "MIT"
repository = "https://github.com/illusions-lab/MDI"
keywords = ["markdown", "mdi", "ruby", "typesetting"]
categories = ["parser-implementations", "text-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.12.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[lints.rust]
unsafe_code = "forbid"
