[package]
name = "mdi-core"
version = "2.0.2"
description = "Language-neutral parser for MDI 2.0 syntax"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/illusions-lab/MDI"
documentation = "https://docs.rs/mdi-core"
readme = "README.md"
keywords = ["markdown", "mdi", "ruby", "typesetting"]
categories = ["parser-implementations", "text-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
markdown = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
unicode-segmentation = "1.12.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[lints.rust]
unsafe_code = "forbid"
