[package]
name = "mdi-core"
version = "2.0.5"
description = "Language-neutral parser for MDI 2.0 syntax"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/illusions-lab/MDI"
documentation = "https://docs.rs/mdi-core"
readme = "README.md"
keywords = ["markdown", "mdi", "ruby", "typesetting"]
categories = ["parser-implementations", "text-processing"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
markdown = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "=0.3.41", features = ["formatting"] }
unicode-segmentation = "1.12.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

# wasm-pack's bundled wasm-opt currently rejects the multi-table module emitted
# by the stable Rust toolchain used in CI. rustc's release optimization remains
# enabled; skip only that incompatible post-processing pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints.rust]
unsafe_code = "deny"
