[package]
name = "illusion-markdown-python"
version = "2.0.4"
description = "PyO3 bindings for illusion Markdown (MDI)"
edition = "2024"
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/illusions-lab/MDI"
exclude = [
  ".pytest_cache/**",
  "coverage*.xml",
  "src/mdi/_native.abi3.so",
  "src/**/__pycache__/**",
  "tests/**/__pycache__/**",
  "target/**",
]

[lib]
name = "mdi_native"
crate-type = ["cdylib"]

[dependencies]
mdi-core = { path = "../mdi-core" }
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
