[project]
name = "mdi"
version = "0.0.0"
description = "Python implementation of illusion Markdown (MDI). Not yet implemented."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdi"]
