[project]
name = "illusion-markdown"
version = "2.0.3"
description = "Python bindings for illusion Markdown (MDI), backed by the Rust core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "illusions-lab" }]
keywords = ["markdown", "mdi", "ruby", "typesetting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Markup",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project.urls]
Homepage = "https://github.com/illusions-lab/MDI"
Documentation = "https://mdi.illusions.app/bindings/python/"
Repository = "https://github.com/illusions-lab/MDI"
Issues = "https://github.com/illusions-lab/MDI/issues"

[project.optional-dependencies]
test = ["pytest>=8.3,<9", "pytest-cov>=6.0,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["src/mdi"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "mdi._native"
python-source = "src"
