[package]
name = "mdi-core"
version = "2.0.1"
description = "Language-neutral parser for MDI 2.0 syntax"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["markdown", "mdi", "ruby", "typesetting"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
unicode-segmentation = "1.12.0"

[lints]
workspace = true
